# tmuxide

./: .gitignore  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  rebuild.sh
homebrew/: tmuxide.rb.in
man/: Makefile.am
man/man1/: tmuxide.1
scripts/: Makefile.am  log-pane  log-pane.in  tmuxide.in
share/man/man1/: tmuxide.1
