#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([tmuxide], [0.0.5], [frankjmattia+tmuxide@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile man/Makefile scripts/Makefile])
AC_CONFIG_FILES([scripts/tmuxide], [chmod +x scripts/tmuxide])
AC_CONFIG_FILES([scripts/log-pane], [chmod +x scripts/log-pane])
AC_OUTPUT
